[package]
name = "xlidst"
version = "0.1.0"
edition = "2024"

[dependencies]
nannou = "0.19.0"
tar = "0.4.44"
time = "0.3.41"
tiny-skia = "0.11.4"
ttf-parser = "0.25.1"
typst = "0.13.1"
typst-assets = { version = "0.13.1", features = ["fonts"] }
typst-render = "0.13.1"
ureq = "3.1.0"
zune-inflate = "0.2.54"
